[tool.poetry]
name = "moldovaborder"
version = "0.1.0"
description = ""
authors = ["evgeniavolkova <eivolkova3@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pandas = "^2.1.0"
bs4 = "^0.0.1"
tqdm = "^4.66.1"
matplotlib = "^3.7.2"

[tool.poetry.dev-dependencies]
ipykernel = "^6.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
